--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -7,7 +7,9 @@ $container-width: 1024px;
 $grid-spacing: 8px;
 $min-screen-height: 560px;
 $chapter-count: 6;
+$small-desktop-breakpoint: 1100px;
 $tablet-landscape-breakpoint: 1024px;
+$tablet-landscape-height: 768px;
 $tablet-portrait-breakpoint: 768px;
 $phone-breakpoint: 480px;
 $tablet-landscape-affix: tl;
